# axum-curd-rs

./: Cargo.toml
axum-curd/: Cargo.toml
axum-curd-macro/: Cargo.toml
axum-curd-macro/src/: macros.rs
axum-curd/src/: curd.rs  lib.rs
