[package]
name = "axum-curd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = "1.40"
paste = "1.0.15"
anyhow = "1.0.89"

rest-model = "0.1.1"
rest-model-postgres = "0.1.1"

axum-curd-macro = { path = "../axum-curd-macro" }

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
